[gd_scene load_steps=4 format=3 uid="uid://bjx8t4nesmk2q"]

[ext_resource type="Texture2D" uid="uid://bln3kpvmnh0qo" path="res://AllTextures/ForLevels/GameObjects/Ladder/Ladder.png" id="1"]
[ext_resource type="Script" path="res://ScenesANDScripts/ForLevels/GameObjects/Ladder/Ladder.gd" id="2"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(87, 467)

[node name="Ladder" type="Node2D"]
script = ExtResource("2")

[node name="Sprite" type="Node2D" parent="."]

[node name="Ladder1" type="Sprite2D" parent="Sprite"]
scale = Vector2(0.75, 0.75)
texture = ExtResource("1")

[node name="Ladder2" type="Sprite2D" parent="Sprite"]
position = Vector2(0, -93)
scale = Vector2(0.75, 0.75)
texture = ExtResource("1")

[node name="Ladder3" type="Sprite2D" parent="Sprite"]
position = Vector2(0, -186)
scale = Vector2(0.75, 0.75)
texture = ExtResource("1")

[node name="Ladder4" type="Sprite2D" parent="Sprite"]
position = Vector2(0, -279)
scale = Vector2(0.75, 0.75)
texture = ExtResource("1")

[node name="Ladder5" type="Sprite2D" parent="Sprite"]
position = Vector2(0, -372)
scale = Vector2(0.75, 0.75)
texture = ExtResource("1")

[node name="AreaLift" type="Area2D" parent="."]

[node name="CollisionLift" type="CollisionShape2D" parent="AreaLift"]
position = Vector2(-0.5, -186.5)
shape = SubResource("1")

[node name="VisibleOnScreenEnabler" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(-0.5, -186.5)
scale = Vector2(4.35, 23.35)

[connection signal="body_entered" from="AreaLift" to="." method="_on_area_lift_body_entered"]
[connection signal="body_exited" from="AreaLift" to="." method="_on_area_lift_body_exited"]
[connection signal="screen_entered" from="VisibleOnScreenEnabler" to="." method="_on_visible_on_screen_enabler_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler" to="." method="_on_visible_on_screen_enabler_screen_exited"]
